--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,1 +1,43 @@
-<p>footer works!</p>
+<div class="container">
+    <div class="row">
+      <div class="col">
+        <b>SAMA</b>
+        <br/>
+        Somos una compañia ética y sencilla. Disfruta de fibra óptica, gigas en tu móvil y llamadas ilimitadas de la mano de un operador 100% gallego
+      </div>
+      <div class="col">
+        <b>MENÚ</b>
+        <br/>
+        <ul>
+            <li>Link 1</li>
+            <li>Link 2</li>
+            <li>Link 3</li>
+        </ul>
+      </div>
+      <div class="col">
+        <b>EMPRESA</b>
+        <br/>
+        <ul>
+            <li><a routerLink="./aviso-legal">Aviso legal</a></li>
+            <li><a routerLink="./aviso-legal">Politica de cookies</a></li>
+            <li><a routerLink="./privacidad">Politica de privacidad</a></li>
+            <li><a routerLink="./conocenos">Conócenos</a>
+        </ul>
+      </div>
+      <div class="col">
+        <b>Contacto</b>
+        <br/>
+        <ul>
+        <li>Calle pepito</li>
+        <li>Telefono: 145 45 78 45</li>
+        <li>Email: prueba@prueba.com
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <!-- Copyright -->
+  <div class="footer text-center p-4">
+    Todos los derechos reservados © 2022
+  </div>
+  <!-- Copyright -->
