--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,1 +1,29 @@
-<p>header works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <div class="container-fluid">
+    
+      <a class="navbar-brand" href="#">SAMA</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav me-auto">
+          <li class="nav-item">
+            <a class="nav-link active" href="#">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="./contract">Contrato</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="./call-me">Contacta con Nosotros</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="./help">Ayuda</a>
+          </li>
+        </ul>
+        <div class="d-flex justify-content-end">
+          <button type="button" class="btn btn-success btn-sm">Área Clientes</button>
+        </div>
+      </div>
+  </div>
+</nav>
