Cambios minimos en el footer

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -3,7 +3,9 @@
       <div class="col">
         <b>SAMA</b>
         <br/>
-        Somos una compañia ética y sencilla. Disfruta de fibra óptica, gigas en tu móvil y llamadas ilimitadas de la mano de un operador 100% gallego
+        <ul>
+          <li>Somos una compañia ética y sencilla. Disfruta de fibra óptica, gigas en tu móvil y llamadas ilimitadas de la mano de un operador 100% gallego</li>
+        </ul>
       </div>
       <div class="col">
         <b>MENÚ</b>
