--- a/src/app/pages/aviso-legal/aviso-legal.component.html
+++ b/src/app/pages/aviso-legal/aviso-legal.component.html
@@ -1,1 +1,59 @@
-<p>aviso-legal works!</p>
+<div class="container">
+
+    <h1>Aviso Legal</h1>
+
+    <h2><b>1. IDENTIDAD DEL TITULAR WEB</b></h2>
+        <p>GIGAS GALICIA, S.L., con CIF B-70597497 y dirección C/ Isaac Peral 42 – 2º B, 15008 A Coruña TELÉFONO: 900 377 041 E-MAIL: info@gigalia.es</p>
+        <p>Nombre del dominio: <b>www.gigalia.es</b></p>
+        
+        <h2><b>2. ACEPTACIÓN DE LAS CONDICIONES DE USO</b></h2>
+        <p>La utilización de este sitio Web atribuye al navegante, sea persona física o jurídica, la condición de USUARIO, lo cual implica la adhesión a los términos y condiciones que a continuación se indican. A todos los efectos, se contemplarán los términos y condiciones en la versión publicada en el momento en que se produce el acceso.</p>
+        <p>Se recomienda al USUARIO leer atentamente los términos y condiciones que a continuación se detallan antes de hacer uso de los servicios ofertados.</p>
+        <p>Asimismo, el acceso a determinados servicios a través de este sitio Web puede encontrarse sometido a ciertas condiciones particulares propias que, según los casos, sustituyen, completan y/o modifican estas condiciones generales.</p>
+        <p>Por tanto, con anterioridad al acceso y/o utilización de nuestros servicios, el USUARIO debe leer atentamente también las correspondientes condiciones particulares. En caso de no aceptar las condiciones de uso, deberá abstenerse de acceder y utilizar los servicios contenidos en esta Web.</p>
+        <p>Las presentes condiciones de uso regulan el uso genérico de la Web por parte del USUARIO que tiene la posibilidad de visualizarla e imprimirlas.</p>
+        <p>GIGAS GALICIA, S.L. se reserva el derecho a modificar o suprimir en cualquier momento y sin previo aviso los contenidos, servicios e informaciones que se encuentran en esta Web, así como a limitar o cancelar los términos y condiciones aplicables a la Web.</p>
+        
+        <h2><b>3. PROPIEDAD INTELECTUAL E INDUSTRIAL</b></h2>
+        <p>El contenido de esta Web se encuentra protegido por las Leyes sobre Propiedad Intelectual e Industrial.</p>
+        <p>El sitio web, incluyendo a título enunciativo pero no limitativo su programación, edición, compilación y demás elementos necesarios para su funcionamiento, los diseños, logotipos, texto y/o gráficos, son propiedad de GIGAS GALICIA, S.L. o en su caso dispone de licencia o autorización expresa por parte de los autores.</p>
+        <p>Independientemente de la finalidad para la que fueran destinados, la reproducción total o parcial, uso, explota<!--  -->ción, distribución y comercialización, requiere en todo caso de la autorización escrita previa por parte GIGAS GALICIA, S.L.<span class="Apple-converted-space">&nbsp;</span></p>
+        <p>La infracción de cualquiera de los citados derechos puede constituir una vulneración de las presentes disposiciones, así como un delito castigado de acuerdo con los artículos 270 y siguientes del Código Penal.</p>
+        <p>Los diseños, logotipos, texto y/o gráficos ajenos a GIGAS GALICIA, S.L. y que pudieran aparecer en el sitio web, pertenecen a sus respectivos propietarios, siendo ellos mismos responsables de cualquier posible controversia que pudiera suscitarse respecto a los mismos.</p>
+        <p>En todo caso, GIGAS GALICIA, S.L. cuenta con la autorización expresa y previa por parte de los mismos.</p>
+        <p>Las reclamaciones que pudieran interponerse por los USUARIOS en relación con posibles incumplimientos de los derechos de propiedad intelectual o industrial sobre cualesquiera de los Contenidos de este sitio Web deberán dirigirse al correo electrónico info@gigalia.es</p>
+        
+        <h2><b>4. ACCESO A LA WEB</b></h2>
+        <p>Nuestra Web puede ser visitada por cualquier USUARIO de forma libre y gratuita.<!--  --> Los Datos de Carácter Personal que nos facilite serán siempre tratados de conformidad con lo dispuesto en la Ley Orgánica de Protección de Datos de Carácter Personal.</p>
+        <h2><b>5. USO CORRECTO DEL SITIO WEB</b></h2>
+        <p>El USUARIO se compromete a utilizar la Web, los contenidos y los servicios de acuerdo con la Ley, con las buenas costumbres y el orden público.</p>
+        <p>El USUARIO se obliga y compromete a:</p>
+        <p>· No utilizar la Web o los servicios que se prestan a través de ella con finalidades o efectos ilícitos o contrarios al contenido de este Aviso Legal que lesionen los intereses o derechos de terceros, o que de cualquier forma pueda dañar, inutilizar o deteriorar la Web o sus servicios o impedir un uso satisfactorio de la Web a otros usuarios.</p>
+        <p>· No destruir, alterar, inutilizar o, de cualquier otra forma, dañar los datos, los programas o los documentos electrónicos y otros que se encuentren en la Web.</p>
+        <p>· No introducir programas, virus, macroinstrucciones, miniaplicaciones o cualquier otro dispositivo lógico o secuencia de caracteres que causen o puedan causar cualquier tipo de alteración en los sistemas informáticos de GIGAS GALICIA, S.L. o de terceros.</p>
+        <p>· No hacer mal uso de informaciones, mensajes, gráficos, dibujos, archivos de sonido y/o imagen, fotografías, grabaciones, software y, en general, cualquier clase de material accesible a través de la Web o de los servicios que ofrece.</p>
+        <p>· No introducir actuaciones, actitudes o ideas discriminatorias por razón de sexo, raza, religión, creencias, edad o condición.</p>
+        <p>Asimismo, GIGAS GALICIA, S.L. se reserva el derecho a denegar o retirar el acceso a la Web y/o a los servicios en cualquier momento y sin necesidad de previo aviso a aquellos USUARIOS que incumplan estas condiciones generales.</p>
+        
+        <h2><b>6. RÉGIMEN DE RESPONSABILIDAD</b></h2>
+        <p>GIGAS GALICIA, S.L. no se hará responsable, directa ni subsidiariamente de:</p>
+        <p>· La calidad del servicio, la velocidad de acceso, el correcto funcionamiento ni la disponibilidad ni continuidad de funcionamiento de la Web.</p>
+        <p>· Que existan interrupciones del servicio, demoras, errores, mal funcionamiento del mismo y, en general, demás inconvenientes que tengan su origen en causa que escapan del control de GIGAS GALICIA, S.L.</p>
+        <p>· Una actuación dolosa o culposa del USUARIO y/o tenga por origen causas de fuerza mayor. En cualquier caso, sea cual fuere su causa.</p>
+        <p>· Daños directos o indirectos, daño emergente y/o por lucro cesante.</p>
+        <p>· Los contenidos y opiniones de terceros ni de la información contenida en páginas Web de terceros a las que se pueda acceder por Enlaces o buscadores del sitio Web.</p>
+        <p>· Los daños que puedan causarse en los equipos de los USUARIOS por posibles virus informáticos contraídos a causa de su navegación en el sitio Web o por cualquier otro daño derivado de esa navegación.</p>
+        <p>· Del incumplimiento de la ley, la moral y las buenas costumbres generalmente aceptadas o el orden público como consecuencia de la transmisión, difusión, almacenamiento, puesta a disposición, recepción, obtención o acceso a los contenidos.</p>
+        <p>· Los vicios, y defectos de toda clase de los contenidos transmitidos, difundidos, almacenados o puestos a disposición, la falta de actualización o de exactitud de los mismos, ni de su calidad científica en su caso.</p>
+        <p>Así mismo, GIGAS GALICIA, S.L. no garantiza que la Web y el servidor estén libres de virus y no se hace responsable de los daños causados por el acceso a la Web o por la imposibilidad de acceder.</p>
+        
+        <p>GIGAS GALICIA, S.L. tendrá derecho, sin que exista indemnización alguna al USUARIO por estos conceptos, a suspender temporalmente los servicios y Contenidos del sitio Web para efectuar operaciones de mantenimiento, mejora o reparación de los mismos.</p>
+        <h2><b>7. PROTECCIÓN DE DATOS</b></h2>
+        <p>Tratamos la información que nos facilita con el fin de prestarles el servicio solicitado. Los datos proporcionados se conservarán durante los años necesarios para cumplir con las obligaciones legales. Los datos no se cederán a terceros salvo en los casos en que exista una obligación legal. Usted tiene derecho a acceder a sus datos personales, rectificar los datos inexactos o solicitar su supresión cuando los datos ya no sean necesarios.</p>
+        <p>Si desea ejercitar sus derechos podrá dirigirse al correo electrónico info@gigalia.es</p>
+        
+        <h2><b>8. PUBLICIDAD</b></h2>
+        <p>Conforme a lo regulado en la Ley de Servicios de la Sociedad de la Información y Comercio Electrónico (LSSICE) la política respecto al correo electrónico se centra en remitir únicamente comunicaciones que el USUARIO haya solicitado recibir. Si no desea recibir estos mensajes por correo electrónico, puede dirigirse a la dirección de correo electrónico info@gigalia.es</p>
+        <h2><b>9. LEGISLACIÓN APLICABLE Y COMPETENCIA JUDICIAL</b></h2>
+        <p>Las presentes condiciones están redactadas en español, y se encuentran sometidas a la legislación española vigente. Para toda cuestión litigiosa o que incumba al sitio Web de GIGAS GALICIA, S.L. serán competentes los Juzgados y Tribunales de A Coruña, España.</p>
+</div>
