agrego informacion de las politicas

--- a/src/app/pages/cookies/cookies.component.html
+++ b/src/app/pages/cookies/cookies.component.html
@@ -1,1 +1,104 @@
-<p>cookies works!</p>
+<div class="container mt-5 mb-5">
+    <h1>Política de Cookies</h1>
+    <hr>
+
+    <h2>¿Qué son las Cookies?</h2>
+    <p>Las cookies son pequeños archivos que se instalan en el terminal del USUARIO al visitar un sitio web con la
+        finalidad de almacenar datos que podrán ser actualizados y recuperados por la entidad responsable de su
+        instalación.</p>
+    <p>Si el USUARIO no se registra ni deja información personal en el sitio, el servidor tendrá conocimiento de que
+        alguien con esa cookie regresó al sitio web, pero le será imposible asociar la navegación a un USUARIO concreto
+        e identificado.</p>
+
+    <h2>¿Qué clases de Cookies existen?</h2>
+    <p>Las cookies, en función de su caducidad, pueden clasificarse en cookies de sesión o permanentes. Las primeras
+        expiran cuando el usuario cierra el navegador mientras que las segundas permanecen por un tiempo superior
+        durante el cual los datos siguen almacenados en el terminal y pueden ser accedidos y tratados.</p>
+    <p>También se pueden distinguir según la entidad que gestione el equipo o dominio desde donde se envían las cookies
+        y se traten los datos que se obtengan.</p>
+    <ul>
+        <li>Cookies propias. Son aquéllas que se envían al equipo terminal del usuario desde un equipo o dominio
+            gestionado por el propio editor y desde el que se presta el servicio solicitado por el propio usuario.</li>
+        <li>Cookies de tercero. Son aquélla que son enviadas al equipo terminal del usuario desde un equipo o domino que
+            no es gestionado por el editor, sino por otra entidad que trata los datos obtenidos a través de las cookies.
+        </li>
+    </ul>
+    <p>En función de su objetivo podemos hablar de:</p>
+    <ul>
+        <li>Cookies técnicas. Permiten al usuario la navegación a través de una página web, plataforma o aplicación y la
+            utilización de las diferentes opciones o servicios que en ella existan como, por ejemplo, controlar el
+            tráfico y la comunicación de datos, identificar la sesión o realizar el proceso de compra de un pedido.</li>
+        <li>Cookies de personalización. Permiten al usuario acceder al servicio con algunas características de carácter
+            general predefinidas en función de una serie de criterios en el terminal del usuario como por ejemplo el
+            idioma o el tipo de navegador.</li>
+        <li>Cookies analíticas. Permiten al responsable de las mismas, el seguimiento y análisis del comportamiento de
+            los usuarios de los sitios web a los que están vinculadas. La información recabada se utiliza en la medición
+            de la actividad de los sitios web, aplicación o plataforma y para la elaboración de perfiles de navegación
+            de los usuarios de dichos sitios, aplicaciones y plataformas, con el fin de introducir mejoras en función
+            del análisis de los datos que hacen los usuarios del servicio.</li>
+        <li>Cookies publicitarias. Permiten la gestión, de la forma más eficaz posible de los espacios publicitarios
+            que, en su caso, el editor haya incluido en una página web, aplicación o plataforma desde la que presta el
+            servicio solicitado en base a criterios como el contenido editado o la frecuencia en la que se muestran los
+            anuncios.</li>
+        <li>Cookies de publicidad ó comportamental: Permiten la gestión, de la forma más eficaz posible, de los espacios
+            publicitarios que, en su caso, el editor haya incluido en una página web, aplicación o plataforma desde la
+            que presta el servicio solicitado. Almacenan información del comportamiento de los usuarios obtenida a
+            través de la observación continuada de sus hábitos de navegación, lo que permite desarrollar un perfil
+            específico para mostrar publicidad en función del mismo.</li>
+    </ul>
+
+    <h2>¿Qué Cookies usa el sitio web Samatelecomunicaciones?</h2>
+    <p>Se instala a través de este sitio web las cookies que a continuación se describen:</p>
+    <table class="table table-striped table-hover">
+        <caption>Cookies utilizadas en esta web</caption>
+        <thead>
+            <tr>
+                <th>Cookies / Aplicaciones instaladas</th>
+                <th>Proposito / Info</th>
+                <th>Caducidad</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>comment_author_[hash] – comment_author_email_[hash] – comment_author_url_[hash]</td>
+                <td>Por defecto, se establecen cookies cuando alguien comenta en una publicación de un blog.</td>
+                <td>347 días</td>
+            </tr>
+            <tr>
+                <td>Yootheme</td>
+                <td>Plantilla profesional que utiliza varios componentes de terceros. Para más información visitar:
+                    https://yootheme.com/support/yootheme-pro/joomla/privacy-and-gdpr</td>
+                <td>–</td>
+            </tr>
+            <tr>
+                <td>Gravity Forms</td>
+                <td>Plugin de formularios. Para más información visitar: https://www.gravityforms.com/cookies/</td>
+                <td>–</td>
+            </tr>
+            <tr>
+                <td>JetPack</td>
+                <td>Plugin que potencia funcionalidades en WP. Para más info: https://es.jetpack.com/support/cookies/
+                </td>
+                <td>–</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <h2>Cómo desactivar o eliminar Cookies</h2>
+    <p>El USUARIO podrá configurar su navegador para que no se le instalen cookies o para recibir un aviso en pantalla
+        cada vez que una cookie quiera instalarse, pudiendo decidir en cada momento si la quiere aceptar o no.
+        Igualmente, el usuario podrá decidir posteriormente eliminar las cookies que tenga instaladas cambiando la
+        configuración de su navegador o eliminándolas manualmente a través del mismo. Tenga en cuenta que la eliminación
+        de las cookies puede suponer una disminución en la calidad o en las funcionalidades de la página web.</p>
+    <p>Pulse sobre el nombre de su navegador para obtener mayor información sobre el mismo:</p>
+    <ul>
+        <li><a href="https://support.google.com/chrome/answer/95647?hl=es" rel="nofollow noopener"
+                target="_blank">Google Chrome</a></li>
+        <li><a href="http://support.apple.com/kb/HT1677?viewlocale=es_ES&amp;locale=es_ES" rel="nofollow noopener"
+                target="_blank">Safari</a></li>
+        <li><a href="https://support.mozilla.org/es/kb/cookies-informacion-que-los-sitios-web-guardan-en-"
+                rel="nofollow noopener" target="_blank">Mozilla Firefox</a></li>
+        <li><a href="http://windows.microsoft.com/es-xl/internet-explorer/delete-manage-cookies#ie=ie-10"
+                rel="nofollow noopener" target="_blank">Internet Explorer</a></li>
+    </ul>
+</div>
