--- a/src/app/pages/help/help.component.html
+++ b/src/app/pages/help/help.component.html
@@ -1,1 +1,252 @@
-<p>help works!</p>
+<div class="container mt-5 mb-5">
+
+    <h5>
+        <p>GENERAL</p>
+    </h5>
+    <hr>
+
+    <p>
+        <a data-bs-toggle="collapse" href="#collapseTarifa" role="button" aria-expanded="false"
+            aria-controls="collapseTarifa">
+            ¿PUEDO MODIFICAR MI TARIFA CONTRATADA?
+        </a>
+    </p>
+    <div class="collapse" id="collapseTarifa">
+        <div class="card card-body">
+            Nuestras tarifas son totalmente flexibles, podrás aumentar o disminuir tu tarifa en base a las necesidades
+            de cada momento tantas veces como lo desees. Para ello solo tendrás que ponerte en contacto con nosotros a
+            través de nuestro teléfono de atención al cliente y solicitarnos las modificaciones que quieras realizar.
+        </div>
+    </div>
+
+    <p>
+        <a data-bs-toggle="collapse" href="#collapseTitular" role="button" aria-expanded="false"
+            aria-controls="collapseTitular">
+            ¿PODEMOS CAMBIAR LA CUENTA BANCARIO O EL TITULAR DEL CONTRATO?
+        </a>
+    </p>
+    <div class="collapse" id="collapseTitular">
+        <div class="card card-body">
+            Puedes realizar cuantos cambios de titular o de cuenta bancaria necesites a lo largo del año, puedes seguir
+            las instrucciones y descargar los formularios para realizar el trámite pulsando aquí.
+        </div>
+    </div>
+
+    <p>
+        <a data-bs-toggle="collapse" href="#collapseConsumo" role="button" aria-expanded="false"
+            aria-controls="collapseConsumo">
+            ¿PUEDO CONSULTAR MI CONSUMO?
+        </a>
+    </p>
+    <div class="collapse" id="collapseConsumo">
+        <div class="card card-body">
+            Desde el área de clientes de nuestra web podrás acceder a todos los datos de tu contrato, facturas e
+            historial de consumo de forma rápida y sencilla.
+        </div>
+    </div>
+
+    <p>
+        <a data-bs-toggle="collapse" href="#collapsePermanencia" role="button" aria-expanded="false"
+            aria-controls="collapsePermanencia">
+            ¿TENGO PERMANENCIA O PENALIZACIÓN EN MI TARIFA?
+        </a>
+    </p>
+    <div class="collapse" id="collapsePermanencia">
+        <div class="card card-body">
+            Esto depende del tipo de producto que hayas contratado.
+
+            Nuestras tarifas móviles no tienen permanencia, desde el primer momento serás libre de irte cuando quieras.
+
+            Si has contratado fibra óptica con nosotros, el periodo de permanencia será de solo 3 meses. Si te das de
+            baja antes de que pasen estos 3 meses, tendrás que abonar una penalización de 181,50€.
+
+            En el caso de haber contratado ADSL, tendrás una permanencia con nosotros de 12 meses. Si te das de baja de
+            nuestro servicio antes de cumplir este periodo, tendrás que abonar una penalización de 121 € por
+            incumplimiento de permanencia. Pasados los primeros 12 meses finalizará tu compromiso de permanencia y
+            podrás darte de baja cuando quieras
+
+            En caso de que hayas decidido darte de baja de nuestro servicio, tendrás que devolvernos el router que hemos
+            instalado en tu domicilio. Si no lo haces, tendremos que aplicar una penalización de 60,50€ en el caso de
+            que no devuelvas el router ADSL y de 121€ en caso de que no devuelvas el router de fibra óptica.
+        </div>
+    </div>
+    <br/>
+    
+    <h5>
+        <p>MÓVIL</p>
+    </h5>
+    <hr>
+
+    <p>
+        <a data-bs-toggle="collapse" href="#collapseMovil" role="button" aria-expanded="false"
+            aria-controls="collapseMovil">
+            ¿CÓMO ES EL PROCESO DE ACTIVACIÓN DE MI LÍNEA MÓVIL?
+        </a>
+    </p>
+    <div class="collapse" id="collapseMovil">
+        <div class="card card-body">
+            El proceso de activación varía en función de si has solicitado un alta nueva o una portabilidad de tu número
+            de teléfono móvil.
+
+            Si has solicitado un alta nueva, te enviaremos la tarjeta SIM a la dirección que nos has facilitado. Tendrás
+            que ponerte en contacto con nosotros para avisarnos de que ya has recibido la tarjeta y así proceder a su
+            activación, que se hará efectiva ese mismo día.
+
+            Si has solicitado una portabilidad de tu número de teléfono móvil, te enviaremos la tarjeta SIM a la
+            dirección que nos has facilitado y recibirás un SMS para saber que día se hará efectiva tu portabilidad. El
+            proceso de portabilidad se realizará de madrugada para que no te quedes sin línea en ningún momento del día.
+            Hasta ese momento, podrás seguir utilizando la SIM de tu antiguo operador con total normalidad.
+        </div>
+    </div>
+
+    <p>
+        <a data-bs-toggle="collapse" href="#collapseDesactivar" role="button" aria-expanded="false"
+            aria-controls="collapseDesactivar">
+            ¿CÓMO PUEDO ACTIVAR O DESACTIVAR EL CONTESTADOR DE MI TELÉFONO FIJO Y MÓVIL?
+        </a>
+    </p>
+    <div class="collapse" id="collapseDesactivar">
+        <div class="card card-body">
+            Para quitar el contestador de tu móvil, marca en el teclado de tu teléfono ##002# y dale a llamar.
+
+            Aparece en la pantalla un mensaje indicando que todos los desvíos han sido desactivados, esto quiere decir
+            que ya se ha desactivado el buzón de voz.
+
+            Para desactivas el buzón de voz del teléfono fijo, tendrás que ponerte en contacto con nosotros para
+            solicitar la desactivación del servicio.
+
+            Aunque quites el contestador, no perderás los mensajes que tengas guardados, podrás seguir llamando al
+            contestador para escucharlos.
+        </div>
+    </div>
+
+    <p>
+        <a data-bs-toggle="collapse" href="#collapseConexionMovil" role="button" aria-expanded="false"
+            aria-controls="collapseConexionMovil">
+            ¿POR QUÉ NO FUNCIONA LA CONEXIÓN A INTERNET DE MI TELÉFONO MÓVIL?
+        </a>
+    </p>
+    <div class="collapse" id="collapseConexionMovil">
+        <div class="card card-body">
+            Antes de nada, deberías tener en cuenta que muchas de las veces que falla la conexión a internet de nuestro
+            teléfono móvil se debe a errores puntuales que se producen por cuestiones técnicas. Normalmente se
+            solucionan solos en muy poco tiempo, pero es posible que en determinadas ocasiones sea necesario reiniciar
+            el terminal.
+
+            Si tras esperar un tiempo y reiniciar el terminal sigues sin poder conectarte a Internet desde tu móvil, haz
+            las siguientes comprobaciones:
+
+            <ul>
+                <li>
+                    Si todavía no lo tienes, pon la selección de red de tu móvil en modo automático. Podrás encontrar
+                    esta
+                    opción en “Ajustes”, donde pone “Operador” o “Selección de red”.
+                </li>
+                <br>
+                <li>
+                    Es posible que ya no tengas gigas disponibles para navegar a alta velocidad porque ya has agotado el
+                    total
+                    de datos de tu tarifa. Las páginas web de Internet cargarán muy lento, dándote la sensación de que
+                    tus
+                    datos
+                    no funcionan. En este caso, puedes ponerte en contacto con nosotros para solicitar un bono de datos
+                    y
+                    seguir
+                    navegando a máxima velocidad.
+                </li>
+                <br>
+                <li>
+                    En el momento en el que activamos tu línea móvil, ésta recibe la configuración automática del APN
+                    (configuración que necesita tu teléfono móvil para poder conectarse a internet), pero algunas marcas
+                    de
+                    teléfonos móviles como Xiaomi, OnePlus, Lenovo, Nexus, Asus y determinados modelos de Motorola y
+                    HTC, no
+                    permiten la configuración remota de forma automática. Si tu móvil pertenece a alguno de estos
+                    modelos,
+                    tendrás que configurar manualmente tu APN para acceder a internet. Puedes consultar los parámetros
+                    de
+                    configuración pulsando aquí, llamarnos por teléfono o acercarte a alguna de nuestras tiendas para
+                    que te
+                    ayudemos a configurar el terminal.
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <p>
+        <a data-bs-toggle="collapse" href="#collapseViaje" role="button" aria-expanded="false"
+            aria-controls="collapseViaje">
+            ¿QUÉ PASA SI ME VOY DE VIAJE FUERA DE ESPAÑA?
+        </a>
+    </p>
+    <div class="collapse" id="collapseViaje">
+        <div class="card card-body">
+            Tendrás que ponerte en contacto con nosotros antes de salir de España para que activemos el servicio de
+            roaming en tu línea móvil.
+
+            En la unión europea y países asociados podrás usar las llamadas y datos de tu tarifa de contrato con total
+            normalidad y sin ningún coste adicional. Fuera de la unión europea, el precio será distinto a lo que tengas
+            contratado. Puedes consultar los precios de llamadas internacionales pulsando aquí.
+        </div>
+    </div>
+
+    <p>
+        <a data-bs-toggle="collapse" href="#collapsePerdida" role="button" aria-expanded="false"
+            aria-controls="collapsePerdida">
+            ¿QUÉ HAGO SI ME ROBAN EL TELÉFONO MÓVIL O PIERDO LA SIM?
+        </a>
+    </p>
+    <div class="collapse" id="collapsePerdida">
+        <div class="card card-body">
+            Si te han robado el móvil o has perdido la tarjeta SIM, lo primero que debes hacer es ponerte en contacto
+            con nosotros para que podamos ayudarte y bloqueemos tu SIM. A continuación, procederemos a enviarte una
+            nueva tarjeta sim para que recuperes cuanto antes tu número de teléfono.
+        </div>
+    </div>
+
+    <br/>
+    <h5>
+        <p>FIBRA</p>
+    </h5>
+    <hr>
+
+    <p>
+        <a data-bs-toggle="collapse" href="#collapseInstalacion" role="button" aria-expanded="false"
+            aria-controls="collapseInstalacion">
+            ¿CUÁL ES EL PROCESO DE INSTALACIÓN DE FIBRA ÓPTICA O ADSL EN MI CASA?
+        </a>
+    </p>
+    <div class="collapse" id="collapseInstalacion">
+        <div class="card card-body">
+            El proceso de instalación y activación varía en función de si has contratado ADSL o fibra óptica, y de si
+            has solicitado un alta nueva o una portabilidad de tu número de teléfono fijo.
+
+            <ul>
+                <li>
+                    Si has contratado ADSL, en un margen de unos 7 días desde que hiciste la contratación, el técnico se
+                    pondrá
+                    en contacto contigo para instalar el PTR (una cajita blanca que pondrá en la pared de tu casa), y un
+                    mensajero te entregará el router Wifi autoinstalable. Si lo necesitas, puedes solicitar la visita de
+                    un
+                    técnico para ayudarte en la instalación, con un coste de 50 euros. Si has solicitado un alta nueva,
+                    en
+                    cuanto te llegue el router y lo conectes empezará a funcionar. Si has solicitado una portabilidad de
+                    teléfono fijo, tendrás que esperar a que se haga efectiva la portabilidad para empezar a utilizar tu
+                    teléfono fijo con SamaTelecomunicaciones, pero en ningún momento te quedarás sin línea ya que podrás
+                    seguir utilizando tu
+                    router antiguo hasta que se haga efectiva dicha portabilidad.
+                </li>
+                <br>
+                <li>
+                    Si has contratado fibra óptica, en un máximo de 5 días desde la contratación, un técnico irá a tu
+                    casa a
+                    realizar la instalación de la fibra óptica, y en cuanto el técnico finalice la instalación tu router
+                    empezará a funcionar. Si has solicitado una portabilidad de teléfono fijo, tendrás que esperar un
+                    máximo de
+                    24 horas para que se haga efectiva la portabilidad y empezar a utilizar tu fijo con
+                    SamaTelecomunicaciones.
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
