--- a/src/app/pages/privacidad/privacidad.component.html
+++ b/src/app/pages/privacidad/privacidad.component.html
@@ -1,1 +1,48 @@
-<p>privacidad works!</p>
+<div class="container mt-5 mb-5">
+    <h1> Política de privacidad </h1>
+    <hr>
+    <h2>1. FINALIDAD DEL TRATAMIENTO</h2>
+    <p>SAMA TELECOMUNICACIONES Y SERVICIOS, con CIF B-70569876 informa al Usuario de que es titular de ficheros
+        de datos de
+        carácter personal en los que sus datos quedan incorporados y son tratados con el fin de prestarle los
+        servicios solicitados y enviarle la información acerca de nuestra empresa que pueda ser de su interés.
+    </p>
+
+    <h2>2. LEGITIMACIÓN DEL TRATAMIENTO</h2>
+    <p>El tratamiento está basado en el consentimiento que se le solicita.</p>
+
+    <h2>3. PLAZO DE CONSERVACIÓN</h2>
+    <p>Los datos proporcionados se conservarán hasta que el interesado no solicite la supresión de sus datos.
+    </p>
+
+    <p>Una vez comunicado por parte del interesado la supresión de sus datos, se procederá a su bloqueo y
+        posterior cancelación en nuestros ficheros o devolución al titular de los datos, según el caso, de los
+        soportes en los que se recoja la información con datos personales facilitada, sin que se admita la
+        conservación de copias de dicha información.</p>
+
+    <h2>4. COMUNICACIÓN DE DATOS A TERCEROS</h2>
+    <p>Sus datos únicamente serán utilizados para los fines antes señalados y no serán cedidos a terceras
+        personas, salvo aquellas comunicaciones a las Autoridades, Organismos u Oficinas de las Administraciones
+        públicas que fueran consentidas por el interesado o persona por él autorizada para el adecuado
+        cumplimiento de las obligaciones nacidas de los servicios prestados, o que resultaren preceptivas o
+        autorizadas por Ley.</p>
+
+    <h2>5. DEBER DE CONFIDENCIALIDAD</h2>
+    <p>SAMA TELECOMUNICACIONES Y SERVICIOS garantiza la confidencialidad de los datos personales que obren en sus
+        ficheros y
+        adoptará las medidas reglamentarias que eviten, en la medida de lo posible, su alteración, pérdida,
+        tratamiento o acceso no autorizado.</p>
+
+    <h2>6. EJERCICIO DE DERECHOS</h2>
+    <p>Usted tiene derecho a acceder a sus datos personales, rectificar los datos inexactos o solicitar su
+        supresión cuando los datos ya no sean necesarios.</p>
+    <p>En determinadas ocasiones los interesados podrán solicitar la limitación del tratamiento de sus datos, en
+        cuyo caso únicamente los conservaremos para el ejercicio o la defensa de reclamaciones.</p>
+    <p>Los interesados, en determinadas circunstancias, podrán oponerse al tratamiento de sus datos. Y en GIGAS
+        SAMA TELECOMUNICACIONES Y SERVICIOS dejará de tratar los datos, salvo por motivos legítimos o el ejercicio o la
+        defensa de
+        posibles reclamaciones.</p>
+    <p>Puede ejercitar sus derechos al correo electrónico direccion@samatelecomunicaciones.coms</p>
+    <p>También tiene derecho a retirar su consentimiento al tratamiento de sus datos personales en cualquier
+        momento y a presentar una reclamación ante la Agencia Española de Protección de Datos.</p>
+</div>
