--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,10 +1,11 @@
-<div class="container">
+<div class="submenu pt-5">
+  <div class="container">
     <div class="row">
       <div class="col">
         <b>SAMA</b>
         <br/>
         <ul>
-          <li>Somos una compañia ética y sencilla. Disfruta de fibra óptica, gigas en tu móvil y llamadas ilimitadas de la mano de un operador 100% gallego</li>
+          <li>Somos una compañia ética y sencilla. Disfruta de fibra óptica, gigas en tu móvil y llamadas ilimitadas de la mano de un operador 100% gallega</li>
         </ul>
       </div>
       <div class="col">
@@ -21,7 +22,7 @@
         <br/>
         <ul>
             <li><a routerLink="./aviso-legal">Aviso legal</a></li>
-            <li><a routerLink="./aviso-legal">Politica de cookies</a></li>
+            <li><a routerLink="./cookies">Politica de cookies</a></li>
             <li><a routerLink="./privacidad">Politica de privacidad</a></li>
             <li><a routerLink="./conocenos">Conócenos</a>
         </ul>
@@ -30,14 +31,14 @@
         <b>Contacto</b>
         <br/>
         <ul>
-        <li>Calle pepito</li>
-        <li>Telefono: 145 45 78 45</li>
-        <li>Email: prueba@prueba.com
+        <li>CALLE COPERNICO, NUM. 6 OFICINA 2.8 15008 CORUÑA (A) - (CORUÑA, A)</li>
+        <li>684 60 35 51</li>
+        <li>direccion@samatelecomunicaciones.com
         </ul>
       </div>
     </div>
   </div>
-
+</div>
   <!-- Copyright -->
   <div class="footer text-center p-4">
     Todos los derechos reservados © 2022
