--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -2,6 +2,10 @@ li {
     list-style:none;
 }
 
+.submenu {
+    background-color: #F6F6F6;
+}
+
 .footer {
     background-color: #213A4E;
     font-size: 12px;
