--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,33 @@
-<p>home works!</p>
+<nav id="navbar-example2" class="navbar navbar-light bg-light d-flex justify-content-around">
+    <ul class="nav nav-pills fuente">
+        <li class="navbar-brand">
+            <a class="nav-link fuente" href="./home#fm">FIBRA + MÓVIL</a>
+        </li>
+      <li class="navbar-brand">
+        <a class="nav-link fuente" href="./home#mov">MÓVIL</a>
+      </li>
+      <li class="navbar-brand">
+        <a class="nav-link fuente" href="./home#onmo">SOLO FIBRA</a>
+      </li>
+    </ul>
+  </nav>
+  <div data-spy="scroll" data-target="#navbar-example2" data-offset="0">
+    <h4 id="navbar">FIBRA + MÓVIL</h4>
+    <p>Patrón</p>
+    <!-- <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br> -->
+    <h4 id="fat">MÓVIL</h4>
+    <p>Manu</p>
+    <!-- <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br> -->
+    <h4 id="mdo">SOLO FIBRA</h4>
+    <p>Mario</p>
+  </div>
