--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -6,8 +6,15 @@ li {
     background-color: #F6F6F6;
 }
 
-.footer {
+.copyright {
     background-color: #213A4E;
     font-size: 12px;
-    color: #fff
+    color: #fff;
+}
+
+.footer {
+    position: relative;
+    clear: both;
+    margin-top: 0px;
+    padding-top: 0px;
 }
