--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <nav id="navbar-example2" class="navbar navbar-light bg-light d-flex justify-content-around">
-    <ul class="nav nav-pills fuente">
+    <ul class="nav nav-pills">
         <li class="navbar-brand">
             <a class="nav-link fuente" href="./home#fm">FIBRA + MÓVIL</a>
         </li>
@@ -12,7 +12,7 @@
     </ul>
   </nav>
   <div data-spy="scroll" data-target="#navbar-example2" data-offset="0">
-    <h4 id="navbar">FIBRA + MÓVIL</h4>
+    <h4 id="fm">FIBRA + MÓVIL</h4>
     <p>Patrón</p>
     <!-- <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -20,7 +20,7 @@
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br> -->
-    <h4 id="fat">MÓVIL</h4>
+    <h4 id="mov">MÓVIL</h4>
     <p>Manu</p>
     <!-- <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -28,6 +28,6 @@
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br> -->
-    <h4 id="mdo">SOLO FIBRA</h4>
+    <h4 id="onmo">SOLO FIBRA</h4>
     <p>Mario</p>
   </div>
