--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark prueba">
+<nav class="navbar navbar-expand-lg navbar-dark fondo">
   <div class="container-fluid">
     
       <a class="navbar-brand" routerLink="./home">SAMA</a>
@@ -19,7 +19,7 @@
           </li>
         </ul>
         <div class="d-flex justify-content-end">
-          <button type="button" class="btn btn-success btn-sm">Área Clientes</button>
+          <button type="button" class="btn btn-success btn-sm"><b>Área Clientes</b></button>
         </div>
       </div>
   </div>
