--- a/src/app/pages/contract/contract.component.html
+++ b/src/app/pages/contract/contract.component.html
@@ -1,1 +1,81 @@
-<p>contract works!</p>
+<div class="container">
+    <form class="mt-5">
+        <!-- ################################################## -->
+        <!-- ###################RADIO BUTTONS################## -->
+        <!-- ################################################## -->
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+            <label class="form-check-label" for="flexRadioDefault1">
+              <b>MÓVIL</b>
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+            <label class="form-check-label" for="flexRadioDefault2">
+                <b>FIBRA + MÓVIL</b>
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
+            <label class="form-check-label" for="flexRadioDefault3">
+                <b>SOLO FIBRA</b>
+            </label>
+          </div>
+        <!-- ################################################## -->
+        <!-- ###################¡COMENZAMOS!################### -->
+        <!-- ################################################## -->
+        <div class="mt-4"><span class="rojo">1. </span>¡COMENZAMOS!</div>
+        <div class="mt-3 mb-3 d-md-flex gap-3 d-grid">
+            <input type="text" class="form-control" id="exampleInput1" placeholder="Nombre">
+            <input type="text" class="form-control" id="exampleInput2" placeholder="Apellido">
+        </div>
+        <div class="mt-2 d-md-flex gap-3 d-grid">
+            <input type="email" class="form-control" id="exampleInput3" placeholder="Email">
+            <input type="tel" class="form-control" id="tel" name="tel" placeholder="Teléfono de Contacto">
+        </div>
+        <!-- ################################################## -->
+        <!-- ###########TU OPERADOR MÓVIL ACTUAL############### -->
+        <!-- ################################################## -->
+        <div class="mt-4"><span class="rojo">2. </span>TU OPERADOR MÓVIL ACTUAL</div>
+        <div class="mt-3 mb-3 d-md-flex gap-3 d-grid">
+            <input type="text" class="form-control" id="exampleInput1">
+        </div>
+        <!-- ################################################## -->
+        <!-- ############¿QUIERES CONSERVAR TU NÚMERO?######### -->
+        <!-- ################################################## -->
+        <div class="mt-4"><span class="rojo">3. </span>¿QUIERES CONSERVAR TU NÚMERO?</div>
+        <div class="input-group mt-3">
+            <select class="form-select" id="inputGroupSelect04">
+              <option selected>Elige una..</option>
+              <option value="1">SÍ</option>
+              <option value="2">NO</option>
+            </select>
+          </div>
+        <!-- ################################################## -->
+        <!-- #########¿TIENES FIBRA CON TU COMPAÑÍA ACTUAL?#### -->
+        <!-- ################################################## -->
+        <div class="mt-4"><span class="rojo">4. </span>¿TIENES FIBRA CON TU COMPAÑÍA ACTUAL?</div>
+        <div class="input-group mt-3">
+            <select class="form-select" id="inputGroupSelect04">
+              <option selected>Elige una..</option>
+              <option value="1">SÍ</option>
+              <option value="2">NO</option>
+            </select>
+          </div>
+        <!-- ################################################## -->
+        <!-- ##TE LLAMAMOS GRATIS, SELECCIONA LA FECHA Y HORA## -->
+        <!-- ################################################## -->
+        <div class="mt-4"><span class="rojo">5. </span>TE LLAMAMOS GRATIS, SELECCIONA LA FECHA Y HORA</div>
+        <input class="form-select mt-3" type="datetime-local" name="datetime" id="datetime">
+        <!-- ################################################## -->
+        <!-- ####################ENVIAR######################## -->
+        <!-- ################################################## -->
+        <button type="submit" class="btn btn-dark btn-lg mb-5 mt-4">Enviar</button>
+        <!-- #####################FIN########################## -->
+    </form>
+</div>
+
+
+
+
+<!-- d-flex justify-content-center gap-5 -->
