--- a/src/app/pages/contract/contract.component.css
+++ b/src/app/pages/contract/contract.component.css
@@ -1,3 +1,13 @@
 .rojo {
     color: red;
 }
+
+/* Input numbers */
+/* Chrome, Safari, Edge, Opera, Firefox */ 
+/* input::-webkit-outer-spin-button, 
+input::-webkit-inner-spin-button {   
+    -webkit-appearance: none;   margin: 0; 
+}
+input[type='number'] {   
+    -moz-appearance: textfield; 
+} */
