--- a/src/app/pages/contract/contract.component.html
+++ b/src/app/pages/contract/contract.component.html
@@ -1,9 +1,10 @@
 <div class="container">
     <form class="mt-5">
+        <h2 class="text-center"><b>CONTRATA TU <span class="rojo">NUEVA TARIFA</span> CON <span class="rojo">SAMA</span></b></h2>
         <!-- ################################################## -->
         <!-- ###################RADIO BUTTONS################## -->
         <!-- ################################################## -->
-        <div class="form-check">
+        <div class="form-check mt-3">
             <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
             <label class="form-check-label" for="flexRadioDefault1">
               <b>MÓVIL</b>
