--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -7,14 +7,14 @@ li {
 }
 
 .copyright {
-    background-color: #213A4E;
+    background-color: black;
     font-size: 12px;
     color: #fff;
 }
 
 .footer {
-    position: relative;
-    clear: both;
-    margin-top: 0px;
-    padding-top: 0px;
-}
+    position:fixed;
+    bottom:0px;
+    width:100%;
+    background:#999;
+ }
