Agrego el telefono y mail del footer como url

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -36,8 +36,8 @@
             <b>Contacto</b>
             <br />
             <li><a href="https://www.google.es/maps/place/Sama+Telecomunicaciones+y+Servicios,+SL/@43.3616192,-8.4211592,20.75z/data=!4m5!3m4!1s0xd2e7d849d2faf11:0x4f9676cbf3f233b6!8m2!3d43.3616045!4d-8.4209698" target="blank">CALLE BARCELONA, NUM. 41 OFICINA 15010 CORUÑA (A) - (CORUÑA, A)</a></li>
-            <li>684 60 35 51</li>
-            <li>direccion@samatelecomunicaciones.com
+            <li><a href="tel:+34684603551">684 60 35 51</a></li>
+            <li><a href="direccion@samatelecomunicaciones.com">direccion@samatelecomunicaciones.com</a>
           </ul>
         </div>
       </div>
