--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -17,8 +17,8 @@ li {
 }
 
 .footer {
-    position:fixed;
-    bottom:0px;
-    width:100%;
-    background:#999;
- }
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+  }
